syntax = "proto3";

package io.xpring;

option java_multiple_files = true;
option java_outer_classname = "TransactionStatusProto";
option java_package = "io.xpring.proto";

// The status of a transaction on the XRP Ledger.
// Next field: 4
message TransactionStatus {
  // The transaction status code.
  string transaction_status_code = 1;

  // Whether the transaction was validated.
  bool validated = 2;

  // The lastLedgerSequence this transaction will be valid in.
  uint32 last_ledger_sequence = 3;
}
